--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
