--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "styled-components": "^4.2.0"
